# GraphTraffic-rs

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  rust-toolchain.toml  schema.json
examples/: config.json  tiny_graph.edgelist
src/: cli.rs  graph_dynamics.rs  graph_structure.rs  main.rs  modifiers.rs  observers.rs  random_engine.rs  schema.rs  simulation.rs  test_utils.rs
tests/: readme_example.rs
